[package]
name = "chrono-examples"
version = "0.1.0"
authors = ["Capella <52690366+capella903@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
num-traits = "0.2.14"
structopt = "0.3.21"
