[package]
name = "yup-oauth2-examples"
version = "0.1.0"
authors = ["Capella <52690366+capella903@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yup-oauth2 = "5.1.0"
tokio = { version = "1.2.0", features = ["rt", "io-std", "io-util"] }
anyhow = "1.0.38"
structopt = "0.3.21"
